# taskonator

./: README.md  main.py  models.py  pyproject.toml  task_manager.py  task_store.py  user_manager.py  user_store.py
alembic/: env.py
alembic/versions/: 61e05156cd4b_add_tables_for_user_family_and_tasks.py  b09f673edb88_add_tables_for_user_family_and_tasks.py
src/app_logging/: config.py
src/domains/command/: configuration.py
src/domains/command/main/bot_app/: __main__.py  container.py
src/domains/main/adapter/input/: bot.py
src/domains/main/adapter/input/tg_handlers/: start.py
src/domains/main/adapter/input/tg_handlers/family/: create_family.py
src/domains/main/adapter/input/tg_handlers/tasks/: tasks.py
src/domains/main/adapter/output/: db_models.py  db_tools.py  family_repository_sql.py  tasks_repository_sql.py  user_repository_sql.py
src/domains/main/application/port/input/: family_manager.py  task_manager.py  user_manager.py
src/domains/main/application/port/output/: family_repository.py  task_repository.py  user_repository.py
src/domains/main/application/service/: family_management.py  task_management.py  user_management.py
src/domains/main/domain/: family.py  points.py  task.py
src/domains/task_management/domain/: family.py  submission.py  task.py  user.py
