[tool.poetry]
name = "taskonatorbot"
version = "0.1.0"
description = ""
authors = ["AmmoMax <steelratmax@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.3.0"
dependency-injector = "^4.44.0"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.0"
alembic = "^1.14.0"
psycopg = "^3.2.3"
psycopg-binary = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
